# 3d

./: CMakeLists.txt  README.md  plik
Assignments/: README.md
Assignments/CameraMovement/: README.md
Assignments/Colors/: README.md
Assignments/House/: README.md
Assignments/Indices/: README.md
Assignments/MeshesMaterials/: README.md
Assignments/Phong/: PhongDiffuse.md  PhongSpecular.md
Assignments/Pyramid/: README.md
Assignments/Resizing/: README.md
Assignments/Textures/: ObjReader.md  README.md
Assignments/Uniforms/: README.md
Assignments/Zoom/: README.md
javascript/: 01_canvas_rectangle.html  01_canvas_rectangle.js
src/Application/: shader_source.cpp  utils.cpp  utils.h
src/Assignments/Colors/: CMakeLists.txt  app.cpp
src/Assignments/Colors/shaders/: base_fs.glsl  base_vs.glsl
src/Assignments/House/: CMakeLists.txt  app.cpp
src/Assignments/Triangle/: app.cpp
src/Engine/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  mesh_loader.cpp
src/Engine/shaders/: color_fs.glsl  color_vs.glsl
src/ObjectReader/: CMakeLists.txt  obj_reader.cpp  obj_reader.h  sMesh.h
src/XeEngine/: CMakeLists.txt  Camera.cpp  Camera.h  CameraControler.cpp  CameraControler.h  ColorMaterial.cpp  ColorMaterial.h  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  PhongMaterial.cpp  PhongMaterial.h  Scene.cpp  Scene.h  lights.h  mesh_loader.cpp  mesh_loader.h  rotation.h  stb_image.cpp  utils.cpp  utils.h
src/XeEngine/shaders/: color_fs.glsl  color_vs.glsl  phong_fs.glsl  phong_vs.glsl
